// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalDivider should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-divider rmd-divider--vertical"
  role="separator"
  style="height: 0px;"
/>
`;

exports[`VerticalDivider should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-divider rmd-divider--vertical custom-class-name"
  role="separator"
  style="height: 0px;"
/>
`;

exports[`VerticalDivider should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div
  class="rmd-divider rmd-divider--vertical"
  role="separator"
  style="height: 0px;"
/>
`;

exports[`VerticalDivider should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<div
  class="rmd-divider rmd-divider--vertical"
  role="separator"
  style="height: 0px;"
/>
`;

exports[`VerticalDivider should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<div
  class="rmd-divider rmd-divider--vertical"
  role="separator"
  style=""
/>
`;
